// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SidePanel default 1`] = `
<div>
  <svg
    focusable="false"
    style={
      Object {
        "display": "none",
      }
    }
    xmlns="http://www.w3.org/2000/svg"
  >
    <symbol
      id="talend-arrow-left"
    >
      <svg
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="15,7 4.4,7 8.4,3 7,1.6 0.6,8 7,14.4 8.4,13 4.4,9 15,9 "
        />
      </svg>
    </symbol>
    <symbol
      id="talend-dataprep"
    >
      <svg
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.99976,6a3,3,0,1,0-3-3A3.00082,3.00082,0,0,0,14.99976,6Zm-7,2a2,2,0,1,0-2-2A1.99884,1.99884,0,0,0,7.99976,8Zm16-1.6a2,2,0,1,0-2-2A1.99883,1.99883,0,0,0,23.99976,6.4Zm5.02736,23.85L20.9724,15.74608a3.303,3.303,0,0,0-.9726-1.0078V11.5a1.89446,1.89446,0,0,0,2-1.75,1.8918,1.8918,0,0,0-2-1.75h-8a1.89184,1.89184,0,0,0-2,1.75,1.89449,1.89449,0,0,0,2,1.75v3.23828a3.28838,3.28838,0,0,0-.97168,1.0078L2.97144,30.25A1.07993,1.07993,0,0,0,3.99976,32h24A1.07943,1.07943,0,0,0,29.02712,30.25ZM7.11112,28,9.3328,24h13.335l2.22064,4Z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-download"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16,11v5H0V11H2v3H14V11ZM13.4,7l-1.4-1.4-3,3V0h-2V8.6l-3-3L2.6,7l5.4,5Z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-star"
    >
      <svg
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="8,0 10.5,5 16,5.8 12,9.7 12.9,15.2 8,12.6 3.1,15.2 4,9.7 0,5.8 5.5,5 "
        />
      </svg>
    </symbol>
    <symbol
      id="talend-opener"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.5083,6.998 L8.7373,12.149 C8.8373,12.248 8.8373,12.407 8.7373,12.505 L7.2943,13.926 C7.1953,14.024 7.0323,14.024 6.9333,13.926 L1.5393,8.613 C1.5323,8.607 1.5243,8.61 1.5183,8.604 L0.0743,7.182 C-0.0247,7.084 -0.0247,6.925 0.0743,6.827 L0.0753,6.826 C0.0773,6.824 0.0763,6.82 0.0793,6.818 L1.5223,5.396 C1.5253,5.394 1.5283,5.395 1.5303,5.393 L6.9293,0.074 C7.0293,-0.024 7.1913,-0.024 7.2903,0.074 L8.7343,1.495 C8.8333,1.593 8.8333,1.752 8.7343,1.851 L3.5083,6.998 Z M15.9253,12.1494 C16.0253,12.2474 16.0253,12.4064 15.9253,12.5044 L14.4823,13.9264 C14.3823,14.0244 14.2213,14.0244 14.1213,13.9264 L8.7283,8.6124 C8.7223,8.6074 8.7123,8.6094 8.7063,8.6044 L7.2633,7.1824 C7.1633,7.0844 7.1633,6.9244 7.2633,6.8264 C7.2653,6.8244 7.2653,6.8204 7.2673,6.8174 L8.7103,5.3964 C8.7123,5.3944 8.7163,5.3954 8.7183,5.3924 L14.1173,0.0734 C14.2173,-0.0246 14.3783,-0.0246 14.4783,0.0734 L15.9213,1.4954 C16.0213,1.5934 16.0213,1.7524 15.9213,1.8504 L10.6963,6.9984 L15.9253,12.1494 Z"
          transform="translate(0 1)"
        />
      </svg>
    </symbol>
  </svg>
  <nav
    className="tc-side-panel"
  >
    <ul
      className="nav nav-pills nav-inverse nav-stacked tc-side-panel-list"
    >
      <li
        className={undefined}
        title="Collapse"
      >
        <button
          className="btn btn-link"
          disabled={false}
          id="context-toggle-dock"
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            focusable="false"
            title={null}
          >
            <use
              xlinkHref="#talend-opener"
            />
          </svg>
          <span />
        </button>
      </li>
      <li
        className="tc-side-panel-list-item active"
      >
        <button
          className="btn btn-link"
          disabled={false}
          id="context-nav-preparations"
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            focusable="false"
            title={null}
          >
            <use
              xlinkHref="#talend-dataprep"
            />
          </svg>
          <span>
            Preparations
          </span>
        </button>
      </li>
      <li
        className="tc-side-panel-list-item"
      >
        <button
          className="btn btn-link"
          disabled={false}
          id="context-nav-datasets"
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            focusable="false"
            title={null}
          >
            <use
              xlinkHref="#talend-download"
            />
          </svg>
          <span>
            Datasets
          </span>
        </button>
      </li>
      <li
        className="tc-side-panel-list-item"
      >
        <button
          className="btn btn-link"
          disabled={false}
          id="context-nav-favorites"
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            focusable="false"
            title={null}
          >
            <use
              xlinkHref="#talend-star"
            />
          </svg>
          <span>
            Favorites
          </span>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Storyshots SidePanel docked 1`] = `
<div>
  <svg
    focusable="false"
    style={
      Object {
        "display": "none",
      }
    }
    xmlns="http://www.w3.org/2000/svg"
  >
    <symbol
      id="talend-arrow-left"
    >
      <svg
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="15,7 4.4,7 8.4,3 7,1.6 0.6,8 7,14.4 8.4,13 4.4,9 15,9 "
        />
      </svg>
    </symbol>
    <symbol
      id="talend-dataprep"
    >
      <svg
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.99976,6a3,3,0,1,0-3-3A3.00082,3.00082,0,0,0,14.99976,6Zm-7,2a2,2,0,1,0-2-2A1.99884,1.99884,0,0,0,7.99976,8Zm16-1.6a2,2,0,1,0-2-2A1.99883,1.99883,0,0,0,23.99976,6.4Zm5.02736,23.85L20.9724,15.74608a3.303,3.303,0,0,0-.9726-1.0078V11.5a1.89446,1.89446,0,0,0,2-1.75,1.8918,1.8918,0,0,0-2-1.75h-8a1.89184,1.89184,0,0,0-2,1.75,1.89449,1.89449,0,0,0,2,1.75v3.23828a3.28838,3.28838,0,0,0-.97168,1.0078L2.97144,30.25A1.07993,1.07993,0,0,0,3.99976,32h24A1.07943,1.07943,0,0,0,29.02712,30.25ZM7.11112,28,9.3328,24h13.335l2.22064,4Z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-download"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16,11v5H0V11H2v3H14V11ZM13.4,7l-1.4-1.4-3,3V0h-2V8.6l-3-3L2.6,7l5.4,5Z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-star"
    >
      <svg
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="8,0 10.5,5 16,5.8 12,9.7 12.9,15.2 8,12.6 3.1,15.2 4,9.7 0,5.8 5.5,5 "
        />
      </svg>
    </symbol>
    <symbol
      id="talend-opener"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.5083,6.998 L8.7373,12.149 C8.8373,12.248 8.8373,12.407 8.7373,12.505 L7.2943,13.926 C7.1953,14.024 7.0323,14.024 6.9333,13.926 L1.5393,8.613 C1.5323,8.607 1.5243,8.61 1.5183,8.604 L0.0743,7.182 C-0.0247,7.084 -0.0247,6.925 0.0743,6.827 L0.0753,6.826 C0.0773,6.824 0.0763,6.82 0.0793,6.818 L1.5223,5.396 C1.5253,5.394 1.5283,5.395 1.5303,5.393 L6.9293,0.074 C7.0293,-0.024 7.1913,-0.024 7.2903,0.074 L8.7343,1.495 C8.8333,1.593 8.8333,1.752 8.7343,1.851 L3.5083,6.998 Z M15.9253,12.1494 C16.0253,12.2474 16.0253,12.4064 15.9253,12.5044 L14.4823,13.9264 C14.3823,14.0244 14.2213,14.0244 14.1213,13.9264 L8.7283,8.6124 C8.7223,8.6074 8.7123,8.6094 8.7063,8.6044 L7.2633,7.1824 C7.1633,7.0844 7.1633,6.9244 7.2633,6.8264 C7.2653,6.8244 7.2653,6.8204 7.2673,6.8174 L8.7103,5.3964 C8.7123,5.3944 8.7163,5.3954 8.7183,5.3924 L14.1173,0.0734 C14.2173,-0.0246 14.3783,-0.0246 14.4783,0.0734 L15.9213,1.4954 C16.0213,1.5934 16.0213,1.7524 15.9213,1.8504 L10.6963,6.9984 L15.9253,12.1494 Z"
          transform="translate(0 1)"
        />
      </svg>
    </symbol>
  </svg>
  <nav
    className="undefined tc-side-panel"
  >
    <ul
      className="nav nav-pills nav-inverse nav-stacked tc-side-panel-list"
    >
      <li
        className={undefined}
        title="Expand"
      >
        <button
          className="btn btn-link"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            focusable="false"
            title={null}
          >
            <use
              xlinkHref="#talend-opener"
            />
          </svg>
          <span />
        </button>
      </li>
      <li
        className="tc-side-panel-list-item active"
      >
        <button
          className="btn btn-link"
          disabled={false}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseOver={[Function]}
          role={null}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            focusable="false"
            title={null}
          >
            <use
              xlinkHref="#talend-dataprep"
            />
          </svg>
        </button>
      </li>
      <li
        className="tc-side-panel-list-item"
      >
        <button
          className="btn btn-link"
          disabled={false}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseOver={[Function]}
          role={null}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            focusable="false"
            title={null}
          >
            <use
              xlinkHref="#talend-download"
            />
          </svg>
        </button>
      </li>
      <li
        className="tc-side-panel-list-item"
      >
        <button
          className="btn btn-link"
          disabled={false}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseOver={[Function]}
          role={null}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            focusable="false"
            title={null}
          >
            <use
              xlinkHref="#talend-star"
            />
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Storyshots SidePanel with onSelect function 1`] = `
<div>
  <svg
    focusable="false"
    style={
      Object {
        "display": "none",
      }
    }
    xmlns="http://www.w3.org/2000/svg"
  >
    <symbol
      id="talend-arrow-left"
    >
      <svg
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="15,7 4.4,7 8.4,3 7,1.6 0.6,8 7,14.4 8.4,13 4.4,9 15,9 "
        />
      </svg>
    </symbol>
    <symbol
      id="talend-dataprep"
    >
      <svg
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.99976,6a3,3,0,1,0-3-3A3.00082,3.00082,0,0,0,14.99976,6Zm-7,2a2,2,0,1,0-2-2A1.99884,1.99884,0,0,0,7.99976,8Zm16-1.6a2,2,0,1,0-2-2A1.99883,1.99883,0,0,0,23.99976,6.4Zm5.02736,23.85L20.9724,15.74608a3.303,3.303,0,0,0-.9726-1.0078V11.5a1.89446,1.89446,0,0,0,2-1.75,1.8918,1.8918,0,0,0-2-1.75h-8a1.89184,1.89184,0,0,0-2,1.75,1.89449,1.89449,0,0,0,2,1.75v3.23828a3.28838,3.28838,0,0,0-.97168,1.0078L2.97144,30.25A1.07993,1.07993,0,0,0,3.99976,32h24A1.07943,1.07943,0,0,0,29.02712,30.25ZM7.11112,28,9.3328,24h13.335l2.22064,4Z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-download"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16,11v5H0V11H2v3H14V11ZM13.4,7l-1.4-1.4-3,3V0h-2V8.6l-3-3L2.6,7l5.4,5Z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-star"
    >
      <svg
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="8,0 10.5,5 16,5.8 12,9.7 12.9,15.2 8,12.6 3.1,15.2 4,9.7 0,5.8 5.5,5 "
        />
      </svg>
    </symbol>
    <symbol
      id="talend-opener"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.5083,6.998 L8.7373,12.149 C8.8373,12.248 8.8373,12.407 8.7373,12.505 L7.2943,13.926 C7.1953,14.024 7.0323,14.024 6.9333,13.926 L1.5393,8.613 C1.5323,8.607 1.5243,8.61 1.5183,8.604 L0.0743,7.182 C-0.0247,7.084 -0.0247,6.925 0.0743,6.827 L0.0753,6.826 C0.0773,6.824 0.0763,6.82 0.0793,6.818 L1.5223,5.396 C1.5253,5.394 1.5283,5.395 1.5303,5.393 L6.9293,0.074 C7.0293,-0.024 7.1913,-0.024 7.2903,0.074 L8.7343,1.495 C8.8333,1.593 8.8333,1.752 8.7343,1.851 L3.5083,6.998 Z M15.9253,12.1494 C16.0253,12.2474 16.0253,12.4064 15.9253,12.5044 L14.4823,13.9264 C14.3823,14.0244 14.2213,14.0244 14.1213,13.9264 L8.7283,8.6124 C8.7223,8.6074 8.7123,8.6094 8.7063,8.6044 L7.2633,7.1824 C7.1633,7.0844 7.1633,6.9244 7.2633,6.8264 C7.2653,6.8244 7.2653,6.8204 7.2673,6.8174 L8.7103,5.3964 C8.7123,5.3944 8.7163,5.3954 8.7183,5.3924 L14.1173,0.0734 C14.2173,-0.0246 14.3783,-0.0246 14.4783,0.0734 L15.9213,1.4954 C16.0213,1.5934 16.0213,1.7524 15.9213,1.8504 L10.6963,6.9984 L15.9253,12.1494 Z"
          transform="translate(0 1)"
        />
      </svg>
    </symbol>
  </svg>
  <nav
    className="tc-side-panel"
  >
    <ul
      className="nav nav-pills nav-inverse nav-stacked tc-side-panel-list"
    >
      <li
        className={undefined}
        title="Collapse"
      >
        <button
          className="btn btn-link"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            focusable="false"
            title={null}
          >
            <use
              xlinkHref="#talend-opener"
            />
          </svg>
          <span />
        </button>
      </li>
      <li
        className="tc-side-panel-list-item"
      >
        <button
          className="btn btn-link"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            focusable="false"
            title={null}
          >
            <use
              xlinkHref="#talend-dataprep"
            />
          </svg>
          <span>
            Preparations
          </span>
        </button>
      </li>
      <li
        className="tc-side-panel-list-item active"
      >
        <button
          className="btn btn-link"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            focusable="false"
            title={null}
          >
            <use
              xlinkHref="#talend-download"
            />
          </svg>
          <span>
            Datasets
          </span>
        </button>
      </li>
      <li
        className="tc-side-panel-list-item"
      >
        <button
          className="btn btn-link"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            focusable="false"
            title={null}
          >
            <use
              xlinkHref="#talend-star"
            />
          </svg>
          <span>
            Favorites
          </span>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;
